<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lighterGrey"
    android:orientation="vertical"
    tools:context=".pincode.views.activity.PincodeActivity">


    <LinearLayout
        android:layout_marginTop="48dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lighterGrey"
        android:orientation="vertical">

        <TextView
            android:id="@+id/pin_main_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:text="@string/enter_pin"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView

                android:id="@+id/imageview_circle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:src="@drawable/circle_border_green"
                android:contentDescription="@string/pin_attr" />

            <ImageView
                android:id="@+id/imageview_circle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:src="@drawable/circle_border_green"
                android:contentDescription="@string/pin_attr"/>

            <ImageView
                android:id="@+id/imageview_circle3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:src="@drawable/circle_border_green"
                android:contentDescription="@string/pin_attr"/>

            <ImageView
                android:id="@+id/imageview_circle4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:src="@drawable/circle_border_green"
                android:contentDescription="@string/pin_attr"/>
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="192dp"
        android:background="@color/lighterGrey" />

    <LinearLayout
        android:id="@+id/numPad"
        android:layout_marginBottom="48dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:background="@color/lighterGrey"
        android:gravity="bottom"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/pin_one"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/pin_code_margin"
                android:layout_toStartOf="@+id/pin_two"
                android:gravity="center"
                android:text="@string/one"
                android:textSize="@dimen/pin_code_number" />

            <TextView
                android:id="@+id/pin_two"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/two"
                android:textSize="@dimen/pin_code_number" />

            <TextView
                android:id="@+id/pin_three"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/pin_code_margin"
                android:layout_toEndOf="@id/pin_two"
                android:gravity="center"
                android:text="@string/three"
                android:textSize="@dimen/pin_code_number" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/pin_four"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/pin_code_margin"
                android:layout_toStartOf="@id/pin_five"
                android:gravity="center"
                android:text="@string/four"
                android:textSize="@dimen/pin_code_number" />

            <TextView
                android:id="@+id/pin_five"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/five"
                android:textSize="@dimen/pin_code_number" />

            <TextView
                android:id="@+id/pin_six"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/pin_code_margin"
                android:layout_toEndOf="@id/pin_five"
                android:gravity="center"
                android:text="@string/six"
                android:textSize="@dimen/pin_code_number" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/pin_seven"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/pin_code_margin"
                android:layout_toStartOf="@id/pin_eight"
                android:gravity="center"
                android:text="@string/seven"
                android:textSize="@dimen/pin_code_number" />

            <TextView
                android:id="@+id/pin_eight"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/eight"
                android:textSize="@dimen/pin_code_number" />

            <TextView
                android:id="@+id/pin_nine"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/pin_code_margin"
                android:layout_toEndOf="@id/pin_eight"
                android:gravity="center"
                android:text="@string/nine"
                android:textSize="@dimen/pin_code_number" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageButton
                android:id="@+id/pin_finger"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="@dimen/pin_code_margin"
                android:layout_toStartOf="@id/pin_zero"
                android:background="@drawable/ic_fingerprint"
                android:contentDescription="@string/finger_unlock"
                android:gravity="center" />

            <TextView
                android:id="@+id/pin_zero"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/zero"
                android:textSize="@dimen/pin_code_number" />

            <ImageButton
                android:id="@+id/pin_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/pin_code_margin"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@id/pin_zero"
                android:background="@drawable/ic_cancel"
                android:contentDescription="@string/finger_unlock"
                android:gravity="center" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>