<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"

    android:orientation="vertical">

    <TextView
        android:id="@+id/status_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/login_input" />

    <EditText
        android:id="@+id/login_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/login_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@id/password_input" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@id/auth_line" />

    <RelativeLayout
        android:id="@+id/auth_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_input"
        app:layout_constraintTop_toTopOf="parent">

        <Switch
            android:id="@+id/auth_type_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_margin="10dp" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/submit_button"
            android:visibility="gone" />

        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_margin="10dp"
            android:text="@string/register" />
    </RelativeLayout>


    <TextView
        android:id="@+id/other_methods_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/choose_oauth"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/auth_line" />

    <RelativeLayout
        android:id="@+id/github_google_btns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/other_methods_text">

        <ImageButton
            android:id="@+id/google_log"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/login_google"
            android:onClick="loginWithGoogle"
            android:src="@drawable/ic_google" />

        <ImageButton
            android:id="@+id/github_log"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/google_log"
            android:contentDescription="@string/login_github"
            android:onClick="loginWithGithub"
            android:src="@drawable/ic_github" />
    </RelativeLayout>

    <com.facebook.login.widget.LoginButton
        android:id="@+id/facebook_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/github_google_btns" />

</androidx.constraintlayout.widget.ConstraintLayout>